# toy-package

pycounts_sw/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
pycounts_sw/docs/: Makefile  conf.py  example.ipynb  make.bat
pycounts_sw/src/pycounts_sw/: __init__.py
pycounts_sw/tests/: test_pycounts_sw.py
