[tool.poetry]
name = "pycounts_sw"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["Stephanie Wu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
matplotlib = ">=3.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
pytest-cov = "^6.0.0"
jupyter = "^1.1.1"
sphinx-autoapi = "^3.4.0"
sphinx-rtd-theme = "^3.0.2"
myst-nb = {version = "^1.1.2", python = "^3.11"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"